--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongodb": "^3.6.6",
+		"mongoose": "^5.12.5"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
